--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 
-    <title><%= htmlWebpackPlugin.options.title %></title>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+  <title>Много Мебели — интернет-магазин недорогой мебели №1. Продажа мебели в Москве по низким ценам от производителя
+  </title>
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="keywords"
+    content="много мебели мебельная фабрика производитель компания диван купить мягкая корпусная продажа цена стоимость интернет-магазин недорого москва">
+  <meta name="description"
+    content="Широкий ассортимент диванов и корпусной мебели собственного производства в наличии и под заказ. Цены от производителя, быстрая доставка и увеличенная гарантия на мебель.">
+  <meta property="og:description"
+    content="Широкий ассортимент диванов и корпусной мебели собственного производства в наличии и под заказ. Цены от производителя, быстрая доставка и увеличенная гарантия на мебель.">
+  <link rel="icon" type="image/png" sizes="32x32" href="./icon.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet" />
+</head>
 
-  <body>
-    <div id="app"></div>
-  </body>
+<body>
+  <div id="app"></div>
+</body>
+
 </html>
